syntax = "proto3";

import "google/protobuf/empty.proto";

package transport;

service GossipGrpcService {
    rpc Synchronize (SynchronizeRequest) returns (AcknowledgeResponse) {}
}

message SynchronizeRequest {
    repeated Peer KnownPeers = 1;
}

message AcknowledgeResponse {
    repeated Peer UnknownSenderPeers = 1;
    repeated Peer UnknownReceiverPeers = 2;
}

message Peer {
    bytes PublicKey = 1;
    string IP = 2;
    int32 Port = 3;
    Heartbeat HeartbeatState = 4;

    message Heartbeat {
        int64 GenerationTime = 1;
        int64 ElapsedBeats = 2;
   }

   PeerAppState AppState = 5; 

   message PeerAppState {
        PeerState State = 1;
        string CPULoad = 2;
        float IOWaitRate = 3;
        float FreeDiskSpace = 4;
        string Version = 5;
        Coordinates GeoCoordinates = 6;
        int32 P2PFactor = 7;

        message Coordinates {
                float Lat = 1;
                float Lon = 2;
        };

        enum PeerState {
            Fault = 0;
            Bootstraping = 1;
            Ok = 2;
            StorageOnly = 3;
        };
    }
}




